--- a/application/index/view/layouts/layout.html
+++ b/application/index/view/layouts/layout.html
@@ -77,27 +77,20 @@
                 <li class="hidden-xs">
                     <a href="#" class="dropdown-toggle lt" data-toggle="dropdown">
                         <i class="icon-bell"></i>
-                        <span class="badge badge-sm up bg-danger count">2</span>
+                        <span class="badge badge-sm up bg-danger count"></span>
                     </a>
-                    <section class="dropdown-menu aside-xl animated fadeInUp">
-                        <section class="panel bg-white">
-                            <div class="panel-heading b-light bg-light">
-                                <strong>You have <span class="count">2</span> notifications</strong>
-                            </div>
-                            <div class="list-group list-group-alt">
-                                <a href="#" class="media list-group-item">
-                                    <span class="media-body block m-b-none">
-                                      1.0 initial released<br>
-                                      <small class="text-muted">1 hour ago</small>
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="panel-footer text-sm">
-                                <a href="#" class="pull-right"><i class="fa fa-cog"></i></a>
-                                <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
-                            </div>
-                        </section>
-                    </section>
+                    <ul class="dropdown-menu animated fadeInRight">
+                        <li>
+                            <a href="{:url('index/noticeList',['type'=>2])}">
+                                <span class="badge bg-danger pull-right new_lesson_count"></span>
+                                查看新课程
+                            </a>
+                            <a href="{:url('index/noticeList',['type'=>1])}">
+                                <span class="badge bg-danger pull-right comment_reply_count"></span>
+                                查看回复
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle bg clear" data-toggle="dropdown">
@@ -113,12 +106,6 @@
                             {elseif  condition="$Think.session.bigdata_user_type eq 2"/}
                             <a href="{:url('index/teacher')}">个人中心</a>
                             {/if}
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="badge bg-danger pull-right">3</span>
-                                消息
-                            </a>
                         </li>
                         <li class="divider"></li>
                         <li>
@@ -140,48 +127,36 @@
         </section>
     </section>
 </section>
-<div class="waifu" style="opacity: 0.8">
-    <div class="waifu-tips"></div>
-    <canvas id="live2d"  class="live2d"></canvas>
-    <div class="waifu-tool">
-        <span class="fui-home"></span>
-        <span class="fui-chat"></span>
-        <span class="fui-eye"></span>
-        <span class="fui-user"></span>
-        <span class="fui-photo"></span>
-        <span class="fui-info-circle"></span>
-        <span class="fui-cross"></span>
-    </div>
-</div>
+<!--<div class="waifu" style="opacity: 0.8">-->
+    <!--<div class="waifu-tips"></div>-->
+    <!--<canvas id="live2d"  class="live2d"></canvas>-->
+<!--</div>-->
 <script src="__STATIC__/index/js/bootstrap.js"></script>
 <script src="__STATIC__/index/js/app.js"></script>
 <script src="__STATIC__/index/js/slimscroll/jquery.slimscroll.min.js"></script>
 <script src="__STATIC__/index/js/app.plugin.js"></script>
 
 <script>
-    // add notes
-    // live2d_settings['hitokotoAPI'] = 'hitokoto.cn';  // 一言 API
-    live2d_settings['modelId'] = 5;                  // 默认模型 ID
-    live2d_settings['modelTexturesId'] = 1;          // 默认材质 ID
-    live2d_settings['modelStorage'] = false;         // 不储存模型 ID
-    /* 在 initModel 前添加 */
-    initModel('__STATIC__/js/waifu-tips.json');
+    // initModel('__STATIC__/js/waifu-tips.json');
 
-    function addMsg($msg){
-        var $el = $('.nav-user'), $n = $('.count:first', $el), $v = parseInt($n.text());
-        $('.count', $el).fadeOut().fadeIn().text($v+1);
-        $($msg).hide().prependTo($el.find('.list-group')).slideDown().css('display','block');
+    function getCounts() {
+        ajax_request.post('{:url("index/getNoticeNum")}',{},function (data) {
+            if(data.is_ok == 'ok'){
+                var $el = $('.nav-user');
+                if(data.count_arr.all!=''){
+                    $('.count', $el).text(data.count_arr.all);
+                }
+                if(data.count_arr.new_reply!=''){
+                    $('.comment_reply_count', $el).text(data.count_arr.new_reply);
+                }
+                if(data.count_arr.new_lesson!=''){
+                    $('.new_lesson_count', $el).text(data.count_arr.new_lesson);
+                }
+            }
+        })
     }
-    var $msg = '<a href="#" class="media list-group-item">'+
-        '<span class="pull-left thumb-sm text-center">'+
-        '<i class="fa fa-envelope-o fa-2x text-success"></i>'+
-        '</span>'+
-        '<span class="media-body block m-b-none">'+
-        'Sophi sent you a email<br>'+
-        '<small class="text-muted">1 minutes ago</small>'+
-        '</span>'+
-        '</a>';
-    // setTimeout(function(){addMsg($msg);}, 1500);
+    getCounts();
+    setInterval(function(){ getCounts(); }, 30000);
 </script>
 
 </body>
