--- a/application/index/view/student/question.html
+++ b/application/index/view/student/question.html
@@ -58,7 +58,7 @@
                 <td title="{$comment.content}">{$comment.content|msubstr=0,15,'utf-8',true}</td>
                 <td>{$comment.create_time|date="Y-m-d H:i",###}</td>
                 <td>
-                    <a href="" class="btn btn-sm btn-info">查看</a>
+                    <a href="{:url('index/questionDetail',['id'=>$comment.comment_id])}" class="btn btn-sm btn-info">查看</a>
                     <button class="btn btn-sm btn-danger btn-delete" data-href="{:url('index/commentDel',['id'=>$comment.comment_id])}">移除</button>
                 </td>
             </tr>
