--- a/application/index/view/index/questiondetail.html
+++ b/application/index/view/index/questiondetail.html
@@ -64,7 +64,7 @@
                         </header>
                         <div class="panel-body">
                             <div>{$item.content}</div>
-                            {if($item.uid!=$curUserInfo.id||$item.user_type != $curUserInfo.u_type)}
+                            {if(empty($curUserInfo)||$item.uid!=$curUserInfo.id||$item.user_type != $curUserInfo.u_type)}
                             <div class="comment-action m-t-sm">
                                 <span class="btn btn-default btn-xs btn-reply">
                                     <i class="fa fa-mail-reply text-muted"></i> 回复
@@ -90,7 +90,7 @@
                                 </span>
                                 <p><span class="text-info">{$child.comment_uname}{$child['user_type']==2?'<label class="label bg-success m-l-xs">教师</label>':''} </span> 回复 <span class="text-info">{$child.comment_receive_uname}</span></p>
                                 {$child.content}
-                                {if($child.uid!=$curUserInfo.id||$child.user_type!=$curUserInfo.u_type)}
+                                {if(empty($curUserInfo)||$child.uid!=$curUserInfo.id||$child.user_type!=$curUserInfo.u_type)}
                                 <div class="comment-action m-t-sm">
                                     <span class="btn btn-default btn-xs btn-reply">
                                         <i class="fa fa-mail-reply text-muted"></i> 回复
