修复部分已知bug、教师上传大文件改为分片上传在合并

--- a/application/admin/view/video/index.html
+++ b/application/admin/view/video/index.html
@@ -133,7 +133,7 @@
             },['800px','250px'])
         }
 
-        $('.type_del').on('click',function () {
+        $('.video_del').on('click',function () {
             var url = $(this).data('href');
 
             layui.use("layer", function () {
