--- a/application/index/view/student/question.html
+++ b/application/index/view/student/question.html
@@ -29,7 +29,7 @@
 <div class="">
     <div class="caption wrapper-lg text-center">
         <h3 class="post-title"><img class="empty-info-png" src="__STATIC__/img/empty.png"></h3>
-        <h3 class="post-title">暂无评论</h3>
+        <h3 class="post-title">暂无问答</h3>
     </div>
 </div>
 {/eq}
