--- a/application/index/view/layouts/studentlayout.html
+++ b/application/index/view/layouts/studentlayout.html
@@ -45,11 +45,11 @@
                 </li>
             </ul>
         </div>
-        <form class="navbar-form navbar-left input-s-lg m-t m-l-n-xs hidden-xs" role="search">
+        <form class="navbar-form navbar-left input-s-lg m-t m-l-n-xs hidden-xs" role="search" action="{:url('index/index')}" method="post">
             <div class="form-group">
                 <div class="input-group">
-                    <input type="text" class="form-control input-sm no-border rounded"
-                           placeholder="Search songs, albums...">
+                    <input type="text" name="search_key" value="{$params['search_key']?$params['search_key']:''}"  class="form-control input-sm no-border rounded"
+                           placeholder="搜索...">
                     <span class="input-group-btn">
               <button type="submit" class="btn btn-sm bg-white btn-icon rounded"><i class="fa fa-search"></i></button>
             </span>
@@ -99,12 +99,6 @@
                     <ul class="dropdown-menu animated fadeInRight">
                         <li>
                             <a href="{:url('index/student')}">个人中心</a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="badge bg-danger pull-right">3</span>
-                                消息
-                            </a>
                         </li>
                         <li class="divider"></li>
                         <li>
