收尾功能添加、bug修复

--- a/application/admin/view/layouts/layout.html
+++ b/application/admin/view/layouts/layout.html
@@ -58,6 +58,11 @@
                             <span class="menu-title"><i class="iconfont icon-admin-home "></i>主页</span>
                         </a>
                     </li>
+                    <!--<li class="nav-item nav-item-checked">-->
+                        <!--<a href="{:url('admin/admin')}" class="nav-link <?php if(request()->path()=='admin/admin') echo 'nav-link-check'; ?>">-->
+                            <!--<span class="menu-title"><i class="iconfont icon-admin-admin "></i>管理员账号管理</span>-->
+                        <!--</a>-->
+                    <!--</li>-->
                     <li class="nav-item nav-item-checked">
                         <a href="{:url('admin/dept')}" class="nav-link <?php if(request()->path()=='admin/dept') echo 'nav-link-check'; ?>">
                             <span class="menu-title"><i class="iconfont icon-admin-dept"></i>部门管理</span>
