--- a/application/index/view/index/details.html
+++ b/application/index/view/index/details.html
@@ -105,8 +105,8 @@
               <div class="post-sum col-sm-12 no-padder files-list">
                 {volist name='attachment' id='attach'}
                 <div class="col-md-4 col-sm-6">
-                 {$attach.file_name}
-                 <a href="__STATIC__/{$attach.url}" download="{$attach.file_name}"><i class="text-success icon-arrow-down"></i></a>
+                 {$attach.name}
+                 <a href="__STATIC__/{$attach.url}" download="{$attach.name}"><i class="text-success icon-arrow-down"></i></a>
                 </div>
                  {/volist}
                </div>
