--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -9,8 +9,23 @@
 
 {layout name="layouts/layout" /}
 <header class="header bg-light dk padder-lg">
-    <p class="font-thin padder recently"><a class="{$params['order']==1?'text-success':''}" href="{:url('index',['order'=>1])}">最新</a></p>
-    <p class="font-thin padder popular"><a class="{$params['order']==2?'text-success':''}" href="{:url('index',['order'=>2])}">最热</a></p>
+    <p class="font-thin padder recently "><a class="{$params['order']==1?'text-success':''}" href="{:url('index',['order'=>1])}">最新</a></p>
+    <p class="font-thin padder popular "><a class="{$params['order']==2?'text-success':''}" href="{:url('index',['order'=>2])}">最热</a></p>
+    <p class="font-thin padder popular pull-right">
+        <div class="btn-group pull-right" >
+            <button class="btn btn-default dropdown-toggle text-sm" data-toggle="dropdown">类别 <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a href="{:url('index',['order'=>$params['order'],'ltype'=>''])}"><p class="{$params['ltype']==''?'text-success':''}">全部</p></a></li>
+                {volist name='lessonType' id='ltype'}
+                    <li>
+                        <a href="{:url('index',['order'=>$params['order'],'ltype'=>$ltype.id])}">
+                            <p class="{$params['ltype']==$ltype['id']?'text-success':''}">{$ltype.name}</p>
+                        </a>
+                    </li>
+                {/volist}
+            </ul>
+        </div>
+    </p>
 </header>
 <section class="scrollable padder-lg padder-v page-inner">
     <div class="row row-sm">
