--- a/application/index/view/login/forget.html
+++ b/application/index/view/login/forget.html
@@ -407,6 +407,7 @@
 				<div class="signup">
 					<div class="modal-content modal-info">
 						<div class="modal-header">
+							<h2 class="text-center"><a href="{:url('index/index')}"><img src="__STATIC__/img/favicon.png" width="50px" alt=""></a></h2>
 							<h3>找回密码</h3>
 							<p><a href="{:url('index/login')}" style="color: white">返回登录</a></p>
 						</div>
