--- a/application/admin/view/teacher/importchoose.html
+++ b/application/admin/view/teacher/importchoose.html
@@ -30,6 +30,7 @@
 
 <form class="layui-form" action="" id="myform"  enctype="multipart/form-data" method="POST">
     <div class="layui-form-item layui-form-text">
+        <a href="__STATIC__/uploads/excel/教师信息导入样例.xlsx">下载教师excel导入格式样例</a>
         <div class="layui-upload-drag" id="excel_file">
             <i class="layui-icon"></i>
             <p>点击上传，或将文件拖拽到此处</p>
