--- a/application/admin/view/lesson/index.html
+++ b/application/admin/view/lesson/index.html
@@ -103,6 +103,14 @@
             search(params);
         });
 
+        $('input[name=search_key]').bind('keydown',function(e){
+            if (e.keyCode == 13) {
+                var params = $('.filters').serialize();
+                search(params);
+                return false;
+            }
+        });
+
         function search(params){
             refreshDom('{:url("admin/lesson")}',params,'#adminlesson .table-responsive');
         }
