--- a/application/admin/view/question/index.html
+++ b/application/admin/view/question/index.html
@@ -97,6 +97,14 @@
             refreshDom('{:url("admin/question")}',params,'#adminquestion .table-responsive');
         });
 
+        $('input[name=search_key]').bind('keydown',function(e){
+            if (e.keyCode == 13) {
+                var params = $('.filters').serialize();
+                refreshDom('{:url("admin/question")}',params,'#adminquestion .table-responsive');
+                return false;
+            }
+        });
+
         $('.question_ban').on('click',function () {
             var url = $(this).data('href');
             var title = $(this).data('title');
