--- a/application/admin/view/type/index.html
+++ b/application/admin/view/type/index.html
@@ -94,6 +94,13 @@
             var params = $('.filters').serialize();
             refreshDom('{:url("admin/type")}',params,'#admintype .table-responsive');
         });
+        $('input[name=search_key]').bind('keydown',function(e){
+            if (e.keyCode == 13) {
+                var params = $('.filters').serialize();
+                refreshDom('{:url("admin/type")}',params,'#admintype .table-responsive');
+                return false;
+            }
+        });
 
         $('.type_edit').on('click',function () {
             alt('编辑类别',$(this));
