--- a/application/admin/view/teacher/index.html
+++ b/application/admin/view/teacher/index.html
@@ -137,7 +137,13 @@
             params = $.extend({},params,filters);
             search(params);
         });
-
+        $('input[name=search_key]').bind('keydown',function(e){
+            if (e.keyCode == 13) {
+                var params = $('.filters').serialize();
+                search(params);
+                return false;
+            }
+        });
         $('.search-btn').on('click',function () {
             var params = $('.filters').serialize();
             search(params);
